[gd_scene load_steps=6 format=3 uid="uid://f0uinl60du1f"]

[ext_resource type="Script" path="res://components/avatar_resizer/avatar_resizer.gd" id="1_ntmal"]
[ext_resource type="Texture2D" uid="uid://b16ft1uwcr8k2" path="res://components/avatar_resizer/top_left.svg" id="2_u8f7x"]
[ext_resource type="Texture2D" uid="uid://d308jlm04hrur" path="res://components/avatar_resizer/top_right.svg" id="3_isu4b"]
[ext_resource type="Texture2D" uid="uid://bls7jmcnp0oqi" path="res://components/avatar_resizer/bottom_left.svg" id="4_redjp"]
[ext_resource type="Texture2D" uid="uid://7arvxslgvbob" path="res://components/avatar_resizer/bottom_right.svg" id="5_3t2s2"]

[node name="AvatarResizer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ntmal")

[node name="Top" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TopLeft" type="TextureRect" parent="Top"]
layout_mode = 2
texture = ExtResource("2_u8f7x")

[node name="Space" type="Control" parent="Top"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopRight" type="TextureRect" parent="Top"]
layout_mode = 2
texture = ExtResource("3_isu4b")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Bottom" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="BottomLeft" type="TextureRect" parent="Bottom"]
layout_mode = 2
texture = ExtResource("4_redjp")

[node name="Space" type="Control" parent="Bottom"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BottomRight" type="TextureRect" parent="Bottom"]
layout_mode = 2
texture = ExtResource("5_3t2s2")

[connection signal="gui_input" from="Top/TopLeft" to="." method="_on_top_left_gui_input"]
[connection signal="gui_input" from="Top/TopRight" to="." method="_on_top_right_gui_input"]
[connection signal="gui_input" from="Center" to="." method="_on_center_gui_input"]
[connection signal="gui_input" from="Bottom/BottomLeft" to="." method="_on_bottom_left_gui_input"]
[connection signal="gui_input" from="Bottom/BottomRight" to="." method="_on_bottom_right_gui_input"]
